[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokermda"
version = "0.1.0"
description = "Local Bovada hand history ingestion, review queue, GTOWizard export, and MDA toolkit."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Dongbo Sun" }
]
dependencies = [
  "duckdb>=1.0.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pyyaml>=6.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0"
]

[project.scripts]
pokermda = "pokermda.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pokermda = ["db/schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

